// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> FormContainer Container -- Snapshot Test Matches the snapshot when error occured 1`] = `
<form
  action=""
  className=""
>
  <div
    className="input-container"
  >
    <div
      className="textContainer"
      data-placeholder="enter email"
    >
      <input
        className="text  undefined"
        id="userName"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder=" "
        type="email"
        value=""
      />
      <span
        className="placeholder"
      >
        enter email
      </span>
    </div>
    <span
      className="error"
    >
      
    </span>
  </div>
  <div
    className="input-container"
  >
    <div
      className="textContainer"
      data-placeholder="enter password"
    >
      <input
        className="text  undefined"
        id="password"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder=" "
        type="password"
        value=""
      />
      <span
        className="placeholder"
      >
        enter password
      </span>
    </div>
    <span
      className="error"
    >
      
    </span>
  </div>
  <div
    className="col"
  >
    <button
      className="button"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Test
    </button>
    <p
      className="error"
    >
      not working
    </p>
  </div>
</form>
`;

exports[`>>> FormContainer Container -- Snapshot Test Matches the snapshot when isFetching is true 1`] = `
<form
  action=""
  className=""
>
  <div
    className="input-container"
  >
    <div
      className="textContainer"
      data-placeholder="enter email"
    >
      <input
        className="text  undefined"
        id="userName"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder=" "
        type="email"
        value=""
      />
      <span
        className="placeholder"
      >
        enter email
      </span>
    </div>
    <span
      className="error"
    >
      
    </span>
  </div>
  <div
    className="input-container"
  >
    <div
      className="textContainer"
      data-placeholder="enter password"
    >
      <input
        className="text  undefined"
        id="password"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder=" "
        type="password"
        value=""
      />
      <span
        className="placeholder"
      >
        enter password
      </span>
    </div>
    <span
      className="error"
    >
      
    </span>
  </div>
  <div
    className="col"
  >
    <button
      className="button"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      loading...
    </button>
    <p
      className="error"
    >
      
    </p>
  </div>
</form>
`;

exports[`>>> FormContainer Container -- Snapshot Test Matches the snapshot with isFetching is false 1`] = `
<form
  action=""
  className=""
>
  <div
    className="input-container"
  >
    <div
      className="textContainer"
      data-placeholder="enter email"
    >
      <input
        className="text  undefined"
        id="userName"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder=" "
        type="email"
        value=""
      />
      <span
        className="placeholder"
      >
        enter email
      </span>
    </div>
    <span
      className="error"
    >
      
    </span>
  </div>
  <div
    className="input-container"
  >
    <div
      className="textContainer"
      data-placeholder="enter password"
    >
      <input
        className="text  undefined"
        id="password"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder=" "
        type="password"
        value=""
      />
      <span
        className="placeholder"
      >
        enter password
      </span>
    </div>
    <span
      className="error"
    >
      
    </span>
  </div>
  <div
    className="col"
  >
    <button
      className="button"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Test
    </button>
    <p
      className="error"
    >
      
    </p>
  </div>
</form>
`;
